# Portfolio_via_Streamlit

./: app.py  app_old.py  index.html  pyproject.toml  render.yaml  requirements.txt
.devcontainer/: devcontainer.json
MiniStreamlit/: Learning.py
Portfolio_via_Streamlit/: config.py
Portfolio_via_Streamlit/apps/: portfolio.py  price_comparator.py  puxa_conversa.py  retirement.py
Portfolio_via_Streamlit/assets/WebDevElements/: card.html  style.css
Portfolio_via_Streamlit/assets/lotties/: get_lotties.py
Portfolio_via_Streamlit/assets/questions/: perguntas_normais.txt  perguntas_profundas.txt
Portfolio_via_Streamlit/services/: lotties_service.py  notifications_service.py  questions_service.py  retirement_service.py
