[tool.poetry]
name = "portfolio-via-streamlit"
version = "0.1.0"
description = "Meu portfólio em Streamlit"
authors = ["Seu Nome <seuemail@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.32.0"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
# adicione outros pacotes que estiver usando

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
