[tool.poetry]
name = "portfolio-via-streamlit"
version = "0.1.0"
description = "Meu portfólio em Streamlit"
authors = ["P Frey <pedro.frey@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.32.0"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
yfinance = "^0.2.63"
wikipedia = "^1.4.0"
Pillow = "^11.2.1"
requests = "^2.32.3"
streamlit_lottie = "^0.0.5"
"streamlit-elements" = "0.1.0^"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
